[tool.poetry]
name = "10k-per-minute"
version = "1.0.0"
description = ""
authors = ["Alex Khaerov <hayorov@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
